@@ -150,7 +150,7 @@ const bool path::isEmpty() const
 
 const path::component path::getLastComponent() const
 {
-	return (isEmpty() ? component("") : m_list[m_list.size() - 1]);
+	return (m_list[m_list.size() - 1]);
 }
 
 
