@@ -2,6 +2,10 @@
 VERSION 0.6.2-cvs
 =================
 
+2005-01-02  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Added unit tests for utility::path.
+
 2005-01-01  Vincent Richard  <vincent@vincent-richard.net>
 
  * Converted all C-style casts to C++-style casts.
